Issue #5282: Fixed mmap resize on 32bit windows and unix. When offset > 0, The file was resized to wrong size.